# math-statistics

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: triangle.h  triangle_experiment.h
qcustomplot/: CMakeLists.txt
sample/: sample.cpp
src/: triangle.cpp  triangle_experiment.cpp
